[gd_scene load_steps=20 format=3 uid="uid://c58svkfv86ldn"]

[ext_resource type="Texture2D" uid="uid://bb6dm6pp0q8mv" path="res://art/pack/Factions/Goblins/Troops/TNT/Purple/TNT_Purple.png" id="1_230iq"]
[ext_resource type="Script" path="res://scripts/goblin_enemy_purple.gd" id="1_n370m"]

[sub_resource type="AtlasTexture" id="AtlasTexture_g1hll"]
atlas = ExtResource("1_230iq")
region = Rect2(0, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_bu2q6"]
atlas = ExtResource("1_230iq")
region = Rect2(192, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_qb464"]
atlas = ExtResource("1_230iq")
region = Rect2(384, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_waq41"]
atlas = ExtResource("1_230iq")
region = Rect2(576, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_fiioo"]
atlas = ExtResource("1_230iq")
region = Rect2(768, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_ca68y"]
atlas = ExtResource("1_230iq")
region = Rect2(960, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_mbab3"]
atlas = ExtResource("1_230iq")
region = Rect2(1152, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ad3f"]
atlas = ExtResource("1_230iq")
region = Rect2(0, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_1v4gc"]
atlas = ExtResource("1_230iq")
region = Rect2(192, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_4l0v3"]
atlas = ExtResource("1_230iq")
region = Rect2(384, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_2k1jw"]
atlas = ExtResource("1_230iq")
region = Rect2(576, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_5esbh"]
atlas = ExtResource("1_230iq")
region = Rect2(768, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_4df0r"]
atlas = ExtResource("1_230iq")
region = Rect2(960, 192, 192, 192)

[sub_resource type="SpriteFrames" id="SpriteFrames_2ojs6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g1hll")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bu2q6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qb464")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_waq41")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fiioo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ca68y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mbab3")
}],
"loop": true,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ad3f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1v4gc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4l0v3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2k1jw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5esbh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4df0r")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_20avk"]
radius = 29.1548

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_hy7ot"]
radius = 33.0
height = 192.0

[sub_resource type="CircleShape2D" id="CircleShape2D_l8bpf"]
radius = 146.014

[node name="goblin_enemy_purple" type="CharacterBody2D"]
platform_floor_layers = 4294901760
script = ExtResource("1_n370m")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_2ojs6")
animation = &"walk"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-7, 7)
shape = SubResource("CircleShape2D_20avk")

[node name="enemy_hitbox" type="Area2D" parent="."]

[node name="HitBoxArea" type="CollisionShape2D" parent="enemy_hitbox"]
position = Vector2(53, 4)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_hy7ot")

[node name="detection_zone" type="Area2D" parent="."]

[node name="detection_attack_zone" type="CollisionShape2D" parent="detection_zone"]
shape = SubResource("CircleShape2D_l8bpf")

[node name="take_damage_cooldown" type="Timer" parent="."]
wait_time = 0.45

[node name="deal_damage_cooldown" type="Timer" parent="."]
wait_time = 1.4

[node name="healthbar" type="ProgressBar" parent="."]
modulate = Color(0.431373, 0, 1, 1)
offset_left = -33.0
offset_top = -43.0
offset_right = 23.0
offset_bottom = -25.0
show_percentage = false

[connection signal="body_entered" from="enemy_hitbox" to="." method="_on_enemy_hitbox_body_entered"]
[connection signal="body_exited" from="enemy_hitbox" to="." method="_on_enemy_hitbox_body_exited"]
[connection signal="body_entered" from="detection_zone" to="." method="_on_detection_zone_body_entered"]
[connection signal="body_exited" from="detection_zone" to="." method="_on_detection_zone_body_exited"]
[connection signal="timeout" from="take_damage_cooldown" to="." method="_on_take_damage_cooldown_timeout"]
[connection signal="timeout" from="deal_damage_cooldown" to="." method="_on_deal_damage_cooldown_timeout"]
